stackgres/stackgres-operator/templates/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: stackgres
  namespace: stackgres
spec:
  ingressClassName: nginx
  rules:
  - host: stackgres.csepulveda.net
    http:
      paths:
      - backend:
          service:
            name: stackgres-restapi
            port:
              number: 80
        path: 
        pathType: Prefix
  tls:
  - hosts:
    - stackgres.csepulveda.net
    secretName: jellyfin.csepulveda.net-tls
